--- a/Grocery List ChallengeLPB/MainWindow.xaml
+++ b/Grocery List ChallengeLPB/MainWindow.xaml
@@ -13,19 +13,19 @@
 
         <Border BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Left" Height="108" Margin="40,59,0,0" VerticalAlignment="Top" Width="295" Background="#FF2DF75B"/>
 
-        <Border BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Left" Height="259" Margin="492,130,0,0" VerticalAlignment="Top" Width="254" Background="#FF34BAFF"/>
+        <Border BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Left" Height="259" Margin="473,78,0,0" VerticalAlignment="Top" Width="254" Background="#FF34BAFF"/>
 
         <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="40,22,0,0" Text="Lucas's Grocery List" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" FontWeight="Bold"/>
         <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Margin="47,279,0,0" Text="Enter Item Name" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14"/>
-        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="47,212,0,0" Text="Amount of Items" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18"/>
+        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="119,215,0,0" Text="Amount of Items" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18"/>
         <TextBox x:Name="textBox1" HorizontalAlignment="Left" Margin="107,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="18" TextAlignment="Center"/>
         <TextBox x:Name="textBox3" HorizontalAlignment="Left" Margin="195,311,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="18"/>
         <TextBox x:Name="textBox2" HorizontalAlignment="Left" Margin="47,311,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" FontSize="18"/>
-        <Label x:Name="itemAmountLabel" Content="Label" HorizontalAlignment="Left" Margin="236,207,0,0" VerticalAlignment="Top" FontSize="18" Width="99"/>
-        <Label x:Name="resultLabel" Content="Label" HorizontalAlignment="Left" Margin="506,141,0,0" VerticalAlignment="Top" FontSize="18" Height="248" Width="221"/>
-        <Button x:Name="addItemButton" Content="Add Item" HorizontalAlignment="Left" Margin="147,359,0,0" VerticalAlignment="Top" FontSize="18" Click="addItemButton_Click"/>
+        <Label x:Name="resultLabel" Content="" HorizontalAlignment="Left" Margin="490,84,0,0" VerticalAlignment="Top" FontSize="18" Height="248" Width="220"/>
+        <Button x:Name="addItemButton" Content="Add Item" HorizontalAlignment="Left" Margin="147,359,0,0" VerticalAlignment="Top" FontSize="18" Click="addItemButton_Click" Visibility="Hidden"/>
         <Button x:Name="itemAmountButton" Content="Add Amount of Items" HorizontalAlignment="Left" Margin="79,130,0,0" VerticalAlignment="Top" FontSize="18" Click="itemAmountButton_Click"/>
         <TextBlock x:Name="textBlock4" HorizontalAlignment="Left" Margin="191,279,0,0" Text="Enter Item Price" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="14"/>
+        <Label x:Name="totalLabel" Content="" HorizontalAlignment="Left" Margin="473,351,0,0" VerticalAlignment="Top" Height="50" Width="272" FontSize="18" FontWeight="Bold"/>
 
     </Grid>
 </Window>
